[workspace]
# workspace members
members = [
    "os",
    "user",
    "hal",
    "utils/range-map",
    "utils/segment-tree",
]

# dependencies resolver
resolver = "2"

[workspace.dependencies]
# crates on crates-io
bitflags = "1.2.1"
log = "0.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
spin = "0.9"
virtio-drivers = { version = "0.9.0" }
async-task = { version = "4.7.1", default-features = false }
paste = "1.0"
async-trait = "0.1.88"
hashbrown = "0.14"
strum = { version = "0.26", default_features = false, features = ["derive"] }
rand = { version = "0.9.0-beta.3", default-features = false, features = ["small_rng"] }
downcast-rs = { version = "2.0.1", default-features = false, features = ["sync"]}
sbi-rt = { version = "0.0.2", features = ["legacy"] }
riscv = "0.11.0"
plic = "0.0.3"
bitfield-struct = "0.8"
dyn-clone = "1.0.20"
salsa20 = { version = "0.10.2", default-features = false }
aes = {version = "0.8.4", default-features = false }
polyval = {version = "0.6.2", default_features = false }
universal-hash = { version = "0.5.1", default-features = false }
sha2 = {version = "0.10.9", default_features = false }
sha1 = {version = "0.10.6", default_features = false }
hmac = { version = "0.12", default-features = false }

# crates on github
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator.git", branch = "main"}
fdt = { git = "https://github.com/repnop/fdt.git", branch = "master", features = ["pretty-printing"] }
fatfs = { git = "https://github.com/rafalh/rust-fatfs", branch = "master", default-features = false, features = ["alloc", "lfn", "unicode"] }
xmas-elf = { git = "https://github.com/zlc-dev/xmas-elf", branch = "master" }
lwext4_rust = { git = "https://github.com/PACTHEMAN123/ext4fs.git", default-features = false, branch = "main" }
# lwext4_rust = { path = "../ext4fs", default-features = false }

[workspace.dependencies.smoltcp]
git = "https://github.com/lullabyeoytl/smoltcp_chronix.git"
rev = "5ac01e106e3ec6daac84bba40510cf1791f0396c"  
default-features = false
features = [
    "alloc",
    "log",             
    "medium-ethernet",
    "medium-ip",       
    "proto-ipv4",
    "proto-ipv6",      
    "socket-raw",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
    "socket-dns",
    "async",
    # "fragmentation-buffer-size-65536", "proto-ipv4-fragmentation",
    # "reassembly-buffer-size-65536", "reassembly-buffer-count-32",
    # "assembler-max-segment-count-32",
]